examples/test/testpolicy8428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8428
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key22: value21
      key16: value39
      key18: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value19
      podSelector:
        matchLabels:
          key45: value41
